# WorkMan

./: Makefile  README.md  TODOS.md
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  api.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
backend/: README.md  entrypoint.py  pyproject.toml
backend/src/agentpm/: api.py  bootstrap.py  claude.py  config.py  database.py  docsync.py  events.py  executor.py  github_api.py  gitops.py  main.py  mcp_server.py  models.py  ops.py  orchestrator.py  planner.py  schemas.py  serializers.py
connectors/chatgpt/: README.md
connectors/claude_desktop/: README.md
connectors/cursor/: mcp.json
connectors/vscode/: mcp.json
scripts/: build_sidecar.sh  dev.sh
templates/managed-repo/: AGENTS.md  CHANGELOG.md  CLAUDE.md
templates/managed-repo/.agentpm/: project.yaml
templates/managed-repo/.agentpm/memory/: PROJECT_MEMORY.md
